[package]
name = "valorant_tap_fire_enforcer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winuser"] }
