[package]
name = "valorant_tap_fire_enforcer"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
windows = { version = "0.44.0", features = ["Win32_UI_Input_KeyboardAndMouse"] }
